--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ecommerceapp",
+  "homepage": "https://Pinki-851.github.io/projectPlan",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^8.3.1",
     "firebase-admin": "^9.7.0",
+    "gh-pages": "^3.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -22,6 +24,8 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
